# BankStatementParser

./: .gitignore  .replit  AGENTS.md  CONTRIBUTING.md  README.md  app.py  bank_parsers.py  excel_generator.py  format_cli.py  format_engine.py  format_training.py  package-lock.json  package.json  pdf_processor.py  playwright.config.js  pyproject.toml  reconciliation.py  reconciliation_excel.py  requirements.txt  test_argentinian_parser.py  test_chase_parser.py  test_detect_bank.py  test_extract_text.py  test_galicia_parser.py  test_pdf_processor_debug.py  test_roela_parser.py  utils.py
.github/workflows/: ci.yml
PyPDF2/: __init__.py
attached_assets/: TestBancoRoelaArg.txt
docs/: E2E_PLAYWRIGHT.md  FILE_MAP.md  PRODUCTION_TEST_RUNBOOK.md  PROJECT_CONTEXT.md  PROJECT_STATUS.md  ROADMAP.md
parsers/: __init__.py  base.py  factory.py  generic.py
parsers/argentina/: __init__.py  base.py  galicia.py  roela_ar.py
parsers/spain/: __init__.py  base.py  bbva.py  caixabank.py  santander.py
pdfplumber_stub/: __init__.py
scripts/: run_app.py
scripts/diagnostics/: chase_debug.py  cli_processor_show_text.py  extract_text_demo.py  pdf_column_dump.py  ver_texto.py
test/: chase_parser_debug.py  cli_processor_show_text.py  extract_text_demo.py  pdf_processor.py  ver_texto.py
tests/: pdf_factory.py
tests/e2e/: production_smoke.spec.js
tests/integration/: test_bank_parsing.py  test_sanitized_pdf_extraction.py
tests/regression/: test_format_regression.py
tests/unit/: test_diagnostic_scripts.py  test_format_workflow.py  test_pdf_processor.py  test_reconciliation.py  (+1 more)
(+28 files in other folders)
