[project]
name = "bank-statement-parser"
version = "0.1.0"
description = "Convert bank statement PDFs into normalized Excel and CSV transaction exports."
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "pypdf>=5.1.0",
    "pytest>=9.0.2",
    "streamlit>=1.45.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
